exports[`Container > EditAgency Create agency 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/agency/new-entity-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > EditAgency Create/Edit Agency View loads (create mode) 1`] = `
<Connect(EditAgency)
  params={Object {}}>
  <EditAgency
    create={[Function]}
    delete={[Function]}
    editMode={false}
    params={Object {}}
    update={[Function]}>
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}>
      <div
        className="container">
        <Row
          bsClass="row"
          componentClass="div">
          <div
            className="row">
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}>
              <div
                className="col-xs-12">
                <h3>
                  <span>
                    Create Agency
                  </span>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="pull-right"
                    disabled={false}>
                    <button
                      className="pull-right btn btn-default"
                      disabled={false}
                      type="button">
                      <Link
                        onlyActiveOnIndex={false}
                        style={Object {}}
                        to="/">
                        <a
                          onClick={[Function]}
                          style={Object {}}>
                          <Icon
                            type="arrow-left">
                            <i
                              className="fa fa-arrow-left fa-fw " />
                          </Icon>
                          <span>
                            Back
                          </span>
                        </a>
                      </Link>
                    </button>
                  </Button>
                </h3>
                <Uncontrolled(Form)
                  onChange={[Function]}
                  onError={[Function]}
                  onSubmit={[Function]}
                  schema={
                    ObjectSchema {
                      "_blacklist": BadSet {
                        "_map": Object {},
                        "_refs": Object {},
                      },
                      "_conditions": Array [],
                      "_defaultDefault": [Function],
                      "_deps": Array [],
                      "_excludedEdges": Array [
                        "undefined-undefined",
                      ],
                      "_exclusive": Object {},
                      "_mutate": false,
                      "_nodes": Array [
                        "name",
                      ],
                      "_options": Object {
                        "abortEarly": true,
                        "recursive": true,
                      },
                      "_type": "object",
                      "_typeError": [Function],
                      "_whitelist": BadSet {
                        "_map": Object {},
                        "_refs": Object {},
                      },
                      "fields": Object {
                        "name": StringSchema {
                          "_blacklist": BadSet {
                            "_map": Object {},
                            "_refs": Object {},
                          },
                          "_conditions": Array [],
                          "_deps": Array [],
                          "_exclusive": Object {
                            "required": false,
                          },
                          "_label": "Agency Name",
                          "_mutate": false,
                          "_options": Object {
                            "abortEarly": true,
                            "recursive": true,
                          },
                          "_type": "string",
                          "_typeError": [Function],
                          "_whitelist": BadSet {
                            "_map": Object {},
                            "_refs": Object {},
                          },
                          "tests": Array [
                            [Function],
                            [Function],
                          ],
                          "transforms": Array [
                            [Function],
                          ],
                        },
                      },
                      "tests": Array [],
                      "transforms": Array [
                        [Function],
                      ],
                    }
                  }>
                  <Form
                    component="form"
                    delay={300}
                    getter={[Function]}
                    onChange={[Function]}
                    onError={[Function]}
                    onSubmit={[Function]}
                    schema={
                      ObjectSchema {
                        "_blacklist": BadSet {
                          "_map": Object {},
                          "_refs": Object {},
                        },
                        "_conditions": Array [],
                        "_defaultDefault": [Function],
                        "_deps": Array [],
                        "_excludedEdges": Array [
                          "undefined-undefined",
                        ],
                        "_exclusive": Object {},
                        "_mutate": false,
                        "_nodes": Array [
                          "name",
                        ],
                        "_options": Object {
                          "abortEarly": true,
                          "recursive": true,
                        },
                        "_type": "object",
                        "_typeError": [Function],
                        "_whitelist": BadSet {
                          "_map": Object {},
                          "_refs": Object {},
                        },
                        "fields": Object {
                          "name": StringSchema {
                            "_blacklist": BadSet {
                              "_map": Object {},
                              "_refs": Object {},
                            },
                            "_conditions": Array [],
                            "_deps": Array [],
                            "_exclusive": Object {
                              "required": false,
                            },
                            "_label": "Agency Name",
                            "_mutate": false,
                            "_options": Object {
                              "abortEarly": true,
                              "recursive": true,
                            },
                            "_type": "string",
                            "_typeError": [Function],
                            "_whitelist": BadSet {
                              "_map": Object {},
                              "_refs": Object {},
                            },
                            "tests": Array [
                              [Function],
                              [Function],
                            ],
                            "transforms": Array [
                              [Function],
                            ],
                          },
                        },
                        "tests": Array [],
                        "transforms": Array [
                          [Function],
                        ],
                      }
                    }
                    setter={[Function]}
                    strict={false}>
                    <BindingContext
                      getter={[Function]}
                      onChange={[Function]}
                      setter={[Function]}>
                      <MessageListener
                        onValidationNeeded={[Function]}>
                        <MessageContainer
                          mapNames={[Function]}
                          messages={Object {}}
                          onValidationNeeded={[Function]}>
                          <form
                            noValidate={true}
                            onSubmit={[Function]}>
                            <FormalFieldGroup
                              label="Agency Name"
                              name="name"
                              placeholder="Enter name">
                              <FormGroup
                                bsClass="form-group"
                                controlId="group-item-name">
                                <div
                                  className="form-group">
                                  <ControlLabel
                                    bsClass="control-label"
                                    srOnly={false}>
                                    <label
                                      className="control-label"
                                      htmlFor="group-item-name">
                                      Agency Name
                                    </label>
                                  </ControlLabel>
                                  <Field
                                    className="form-control"
                                    exclusive={false}
                                    name="name"
                                    placeholder="Enter name"
                                    type="">
                                    <Binding
                                      bindTo={[Function]}
                                      changeProp="onChange"
                                      mapValue={
                                        Object {
                                          "name": undefined,
                                        }
                                      }
                                      updateAfterChild={false}
                                      valueProp="value">
                                      <ChildBridge
                                        events="onChange"
                                        onEvent={[Function]}>
                                        <MessageListener
                                          events={
                                            Array [
                                              "onChange",
                                              "onBlur",
                                            ]
                                          }
                                          for="name"
                                          mapMessages={[Function]}>
                                          <MessageTrigger
                                            events={
                                              Array [
                                                "onChange",
                                                "onBlur",
                                              ]
                                            }
                                            for="name"
                                            mapMessages={[Function]}
                                            messages={Object {}}
                                            noValidate={false}>
                                            <ChildBridge
                                              events={
                                                Array [
                                                  "onChange",
                                                  "onBlur",
                                                ]
                                              }
                                              onEvent={[Function]}>
                                              <_class
                                                className="form-control"
                                                meta={
                                                  Object {
                                                    "context": undefined,
                                                    "errorClass": "invalid-field",
                                                    "errors": Object {},
                                                    "invalid": false,
                                                    "onError": [Function],
                                                    "resolvedType": "string",
                                                    "schema": StringSchema {
                                                      "_blacklist": BadSet {
                                                        "_map": Object {},
                                                        "_refs": Object {},
                                                      },
                                                      "_conditions": Array [],
                                                      "_deps": Array [],
                                                      "_exclusive": Object {
                                                        "required": false,
                                                      },
                                                      "_label": "Agency Name",
                                                      "_mutate": false,
                                                      "_options": Object {
                                                        "abortEarly": true,
                                                        "recursive": true,
                                                      },
                                                      "_type": "string",
                                                      "_typeError": [Function],
                                                      "_whitelist": BadSet {
                                                        "_map": Object {},
                                                        "_refs": Object {},
                                                      },
                                                      "tests": Array [
                                                        [Function],
                                                        [Function],
                                                      ],
                                                      "transforms": Array [
                                                        [Function],
                                                      ],
                                                    },
                                                    "valid": true,
                                                  }
                                                }
                                                name="name"
                                                onBlur={[Function]}
                                                onChange={[Function]}
                                                placeholder="Enter name"
                                                value={null}>
                                                <Input
                                                  className="form-control"
                                                  meta={
                                                    Object {
                                                      "context": undefined,
                                                      "errorClass": "invalid-field",
                                                      "errors": Object {},
                                                      "invalid": false,
                                                      "onError": [Function],
                                                      "resolvedType": "string",
                                                      "schema": StringSchema {
                                                        "_blacklist": BadSet {
                                                          "_map": Object {},
                                                          "_refs": Object {},
                                                        },
                                                        "_conditions": Array [],
                                                        "_deps": Array [],
                                                        "_exclusive": Object {
                                                          "required": false,
                                                        },
                                                        "_label": "Agency Name",
                                                        "_mutate": false,
                                                        "_options": Object {
                                                          "abortEarly": true,
                                                          "recursive": true,
                                                        },
                                                        "_type": "string",
                                                        "_typeError": [Function],
                                                        "_whitelist": BadSet {
                                                          "_map": Object {},
                                                          "_refs": Object {},
                                                        },
                                                        "tests": Array [
                                                          [Function],
                                                          [Function],
                                                        ],
                                                        "transforms": Array [
                                                          [Function],
                                                        ],
                                                      },
                                                      "valid": true,
                                                    }
                                                  }
                                                  name="name"
                                                  onBlur={[Function]}
                                                  onChange={[Function]}
                                                  placeholder="Enter name"
                                                  type="text"
                                                  value={null}>
                                                  <input
                                                    className="form-control"
                                                    name="name"
                                                    onBlur={[Function]}
                                                    onChange={[Function]}
                                                    placeholder="Enter name"
                                                    type="text"
                                                    value="" />
                                                </Input>
                                              </_class>
                                            </ChildBridge>
                                          </MessageTrigger>
                                        </MessageListener>
                                      </ChildBridge>
                                    </Binding>
                                  </Field>
                                  <ValidationMessage
                                    className="help-block"
                                    component="span"
                                    errorClass="validation-error"
                                    extract={[Function]}
                                    filter={[Function]}
                                    for="name">
                                    <MessageListener
                                      className="help-block validation-error"
                                      component="span"
                                      for="name">
                                      <Message
                                        className="help-block validation-error"
                                        component="span"
                                        for="name"
                                        messages={Object {}} />
                                    </MessageListener>
                                  </ValidationMessage>
                                </div>
                              </FormGroup>
                            </FormalFieldGroup>
                            <Button
                              className="btn btn-success"
                              component="button"
                              events={
                                Array [
                                  "onClick",
                                ]
                              }
                              type="submit">
                              <button
                                className="btn btn-success"
                                onClick={[Function]}>
                                Create
                              </button>
                            </Button>
                          </form>
                        </MessageContainer>
                      </MessageListener>
                    </BindingContext>
                  </Form>
                </Uncontrolled(Form)>
              </div>
            </Col>
          </div>
        </Row>
      </div>
    </Grid>
  </EditAgency>
</Connect(EditAgency)>
`;

exports[`Container > EditAgency Create/Edit Agency View loads in edit mode 1`] = `
<Connect(EditAgency)
  params={
    Object {
      "agencyId": "agency-1",
    }
  }>
  <EditAgency
    agency={
      Object {
        "_id": "agency-1",
        "name": "Mock Agency",
        "organizations": Array [],
      }
    }
    create={[Function]}
    delete={[Function]}
    editMode={true}
    params={
      Object {
        "agencyId": "agency-1",
      }
    }
    update={[Function]}>
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}>
      <div
        className="container">
        <Row
          bsClass="row"
          componentClass="div">
          <div
            className="row">
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}>
              <div
                className="col-xs-12">
                <h3>
                  <span>
                    Edit Agency
                  </span>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="pull-right"
                    disabled={false}>
                    <button
                      className="pull-right btn btn-default"
                      disabled={false}
                      type="button">
                      <Link
                        onlyActiveOnIndex={false}
                        style={Object {}}
                        to="/">
                        <a
                          onClick={[Function]}
                          style={Object {}}>
                          <Icon
                            type="arrow-left">
                            <i
                              className="fa fa-arrow-left fa-fw " />
                          </Icon>
                          <span>
                            Back
                          </span>
                        </a>
                      </Link>
                    </button>
                  </Button>
                </h3>
                <Uncontrolled(Form)
                  onChange={[Function]}
                  onError={[Function]}
                  onSubmit={[Function]}
                  schema={
                    ObjectSchema {
                      "_blacklist": BadSet {
                        "_map": Object {},
                        "_refs": Object {},
                      },
                      "_conditions": Array [],
                      "_defaultDefault": [Function],
                      "_deps": Array [],
                      "_excludedEdges": Array [
                        "undefined-undefined",
                      ],
                      "_exclusive": Object {},
                      "_mutate": false,
                      "_nodes": Array [
                        "name",
                      ],
                      "_options": Object {
                        "abortEarly": true,
                        "recursive": true,
                      },
                      "_type": "object",
                      "_typeError": [Function],
                      "_whitelist": BadSet {
                        "_map": Object {},
                        "_refs": Object {},
                      },
                      "fields": Object {
                        "name": StringSchema {
                          "_blacklist": BadSet {
                            "_map": Object {},
                            "_refs": Object {},
                          },
                          "_conditions": Array [],
                          "_deps": Array [],
                          "_exclusive": Object {
                            "required": false,
                          },
                          "_label": "Agency Name",
                          "_mutate": false,
                          "_options": Object {
                            "abortEarly": true,
                            "recursive": true,
                          },
                          "_type": "string",
                          "_typeError": [Function],
                          "_whitelist": BadSet {
                            "_map": Object {},
                            "_refs": Object {},
                          },
                          "tests": Array [
                            [Function],
                            [Function],
                          ],
                          "transforms": Array [
                            [Function],
                          ],
                        },
                      },
                      "tests": Array [],
                      "transforms": Array [
                        [Function],
                      ],
                    }
                  }
                  value={
                    Object {
                      "_id": "agency-1",
                      "name": "Mock Agency",
                      "organizations": Array [],
                    }
                  }>
                  <Form
                    component="form"
                    delay={300}
                    getter={[Function]}
                    onChange={[Function]}
                    onError={[Function]}
                    onSubmit={[Function]}
                    schema={
                      ObjectSchema {
                        "_blacklist": BadSet {
                          "_map": Object {},
                          "_refs": Object {},
                        },
                        "_conditions": Array [],
                        "_defaultDefault": [Function],
                        "_deps": Array [],
                        "_excludedEdges": Array [
                          "undefined-undefined",
                        ],
                        "_exclusive": Object {},
                        "_mutate": false,
                        "_nodes": Array [
                          "name",
                        ],
                        "_options": Object {
                          "abortEarly": true,
                          "recursive": true,
                        },
                        "_type": "object",
                        "_typeError": [Function],
                        "_whitelist": BadSet {
                          "_map": Object {},
                          "_refs": Object {},
                        },
                        "fields": Object {
                          "name": StringSchema {
                            "_blacklist": BadSet {
                              "_map": Object {},
                              "_refs": Object {},
                            },
                            "_conditions": Array [],
                            "_deps": Array [],
                            "_exclusive": Object {
                              "required": false,
                            },
                            "_label": "Agency Name",
                            "_mutate": false,
                            "_options": Object {
                              "abortEarly": true,
                              "recursive": true,
                            },
                            "_type": "string",
                            "_typeError": [Function],
                            "_whitelist": BadSet {
                              "_map": Object {},
                              "_refs": Object {},
                            },
                            "tests": Array [
                              [Function],
                              [Function],
                            ],
                            "transforms": Array [
                              [Function],
                            ],
                          },
                        },
                        "tests": Array [],
                        "transforms": Array [
                          [Function],
                        ],
                      }
                    }
                    setter={[Function]}
                    strict={false}
                    value={
                      Object {
                        "_id": "agency-1",
                        "name": "Mock Agency",
                        "organizations": Array [],
                      }
                    }>
                    <BindingContext
                      getter={[Function]}
                      onChange={[Function]}
                      setter={[Function]}
                      value={
                        Object {
                          "_id": "agency-1",
                          "name": "Mock Agency",
                          "organizations": Array [],
                        }
                      }>
                      <MessageListener
                        onValidationNeeded={[Function]}>
                        <MessageContainer
                          mapNames={[Function]}
                          messages={Object {}}
                          onValidationNeeded={[Function]}>
                          <form
                            noValidate={true}
                            onSubmit={[Function]}>
                            <FormalFieldGroup
                              label="Agency Name"
                              name="name"
                              placeholder="Enter name">
                              <FormGroup
                                bsClass="form-group"
                                controlId="group-item-name">
                                <div
                                  className="form-group">
                                  <ControlLabel
                                    bsClass="control-label"
                                    srOnly={false}>
                                    <label
                                      className="control-label"
                                      htmlFor="group-item-name">
                                      Agency Name
                                    </label>
                                  </ControlLabel>
                                  <Field
                                    className="form-control"
                                    exclusive={false}
                                    name="name"
                                    placeholder="Enter name"
                                    type="">
                                    <Binding
                                      bindTo={[Function]}
                                      changeProp="onChange"
                                      mapValue={
                                        Object {
                                          "name": undefined,
                                        }
                                      }
                                      updateAfterChild={false}
                                      valueProp="value">
                                      <ChildBridge
                                        events="onChange"
                                        onEvent={[Function]}>
                                        <MessageListener
                                          events={
                                            Array [
                                              "onChange",
                                              "onBlur",
                                            ]
                                          }
                                          for="name"
                                          mapMessages={[Function]}>
                                          <MessageTrigger
                                            events={
                                              Array [
                                                "onChange",
                                                "onBlur",
                                              ]
                                            }
                                            for="name"
                                            mapMessages={[Function]}
                                            messages={Object {}}
                                            noValidate={false}>
                                            <ChildBridge
                                              events={
                                                Array [
                                                  "onChange",
                                                  "onBlur",
                                                ]
                                              }
                                              onEvent={[Function]}>
                                              <_class
                                                className="form-control"
                                                meta={
                                                  Object {
                                                    "context": undefined,
                                                    "errorClass": "invalid-field",
                                                    "errors": Object {},
                                                    "invalid": false,
                                                    "onError": [Function],
                                                    "resolvedType": "string",
                                                    "schema": StringSchema {
                                                      "_blacklist": BadSet {
                                                        "_map": Object {},
                                                        "_refs": Object {},
                                                      },
                                                      "_conditions": Array [],
                                                      "_deps": Array [],
                                                      "_exclusive": Object {
                                                        "required": false,
                                                      },
                                                      "_label": "Agency Name",
                                                      "_mutate": false,
                                                      "_options": Object {
                                                        "abortEarly": true,
                                                        "recursive": true,
                                                      },
                                                      "_type": "string",
                                                      "_typeError": [Function],
                                                      "_whitelist": BadSet {
                                                        "_map": Object {},
                                                        "_refs": Object {},
                                                      },
                                                      "tests": Array [
                                                        [Function],
                                                        [Function],
                                                      ],
                                                      "transforms": Array [
                                                        [Function],
                                                      ],
                                                    },
                                                    "valid": true,
                                                  }
                                                }
                                                name="name"
                                                onBlur={[Function]}
                                                onChange={[Function]}
                                                placeholder="Enter name"
                                                value="Mock Agency">
                                                <Input
                                                  className="form-control"
                                                  meta={
                                                    Object {
                                                      "context": undefined,
                                                      "errorClass": "invalid-field",
                                                      "errors": Object {},
                                                      "invalid": false,
                                                      "onError": [Function],
                                                      "resolvedType": "string",
                                                      "schema": StringSchema {
                                                        "_blacklist": BadSet {
                                                          "_map": Object {},
                                                          "_refs": Object {},
                                                        },
                                                        "_conditions": Array [],
                                                        "_deps": Array [],
                                                        "_exclusive": Object {
                                                          "required": false,
                                                        },
                                                        "_label": "Agency Name",
                                                        "_mutate": false,
                                                        "_options": Object {
                                                          "abortEarly": true,
                                                          "recursive": true,
                                                        },
                                                        "_type": "string",
                                                        "_typeError": [Function],
                                                        "_whitelist": BadSet {
                                                          "_map": Object {},
                                                          "_refs": Object {},
                                                        },
                                                        "tests": Array [
                                                          [Function],
                                                          [Function],
                                                        ],
                                                        "transforms": Array [
                                                          [Function],
                                                        ],
                                                      },
                                                      "valid": true,
                                                    }
                                                  }
                                                  name="name"
                                                  onBlur={[Function]}
                                                  onChange={[Function]}
                                                  placeholder="Enter name"
                                                  type="text"
                                                  value="Mock Agency">
                                                  <input
                                                    className="form-control"
                                                    name="name"
                                                    onBlur={[Function]}
                                                    onChange={[Function]}
                                                    placeholder="Enter name"
                                                    type="text"
                                                    value="Mock Agency" />
                                                </Input>
                                              </_class>
                                            </ChildBridge>
                                          </MessageTrigger>
                                        </MessageListener>
                                      </ChildBridge>
                                    </Binding>
                                  </Field>
                                  <ValidationMessage
                                    className="help-block"
                                    component="span"
                                    errorClass="validation-error"
                                    extract={[Function]}
                                    filter={[Function]}
                                    for="name">
                                    <MessageListener
                                      className="help-block validation-error"
                                      component="span"
                                      for="name">
                                      <Message
                                        className="help-block validation-error"
                                        component="span"
                                        for="name"
                                        messages={Object {}} />
                                    </MessageListener>
                                  </ValidationMessage>
                                </div>
                              </FormGroup>
                            </FormalFieldGroup>
                            <Button
                              className="btn btn-warning"
                              component="button"
                              events={
                                Array [
                                  "onClick",
                                ]
                              }
                              type="submit">
                              <button
                                className="btn btn-warning"
                                onClick={[Function]}>
                                Update
                              </button>
                            </Button>
                            <Button
                              active={false}
                              block={false}
                              bsClass="btn"
                              bsStyle="danger"
                              disabled={false}
                              onClick={[Function]}>
                              <button
                                className="btn btn-danger"
                                disabled={false}
                                onClick={[Function]}
                                type="button">
                                Delete
                              </button>
                            </Button>
                          </form>
                        </MessageContainer>
                      </MessageListener>
                    </BindingContext>
                  </Form>
                </Uncontrolled(Form)>
              </div>
            </Col>
          </div>
        </Row>
      </div>
    </Grid>
  </EditAgency>
</Connect(EditAgency)>
`;

exports[`Container > EditAgency Delete agency 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > EditAgency Update agency 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/agency/agency-1",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
